<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBaking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>